# crystal-bar

./: Cargo.toml  flake.nix  result  shell.nix  style.css
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 188swwmfa69mxc8qgl1albri3i5clx3l-source  5bj1g89zg68zzzg9pc5z04cqy78n51vh-source
src/: layout.rs  main.rs  style.css
src/modules/: clock.rs  hypr_window.rs  hypr_workspaces.rs  mod.rs  sway_workspaces.rs  sysinfo.rs  window.rs  workspaces.rs
src/widgets/clock/: imp.rs  mod.rs
