[package]
name = "top_bar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "2.1.1"
chrono = "0.4.31"
gio = "0.18.4"
gtk = { version = "0.7.3", package = "gtk4", features = ["v4_12"] }
gtk4-layer-shell = "0.2.0"
tokio = { version = "1.35.1", features = ["rt-multi-thread", "time"] }
