[package]
name = "crystal_bar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-lite = "2.3.0"
swayipc-async = "2.0.2"
chrono = "0.4.31"
gtk = "0.18.1"
gtk-layer-shell = "0.8.0"
sysinfo = "0.30.5"
tokio = { version = "1.35.1", features = ["rt-multi-thread", "time", "sync"] }
hyprland = "0.3.13"
